--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,20 +1,20 @@
 ---
 type: page
 title: About
-date: 2021-03-19
+date: 12-12-2022
 ---
 
-# Your Name
+# TeaSpillStudios
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+## About me
+Hey there, I'm TeaSpillStudios and I'm a developer interested in projects lower down to the system. I'm currently working on a game engine and have built tools for managing time.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
-
-[**Deploy your own**](https://vercel.com/new/git/external?repository-url=https://github.com/vercel-solutions/nextjs-portfolio-starter&project-name=portfolio&repository-name=portfolio) in a few minutes.
+## Where you can find me
+I'm often found on:
+* Discord
+* Matrix
 
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- GitHub [@teaspillstudios](https://github.com/teaspillstudios)
+- Email teaspillstudios@proton.me
